log/build_2025-09-10_03-24-28/obstacle_stop/stderr.log
  File "/home/kadowaki/realsense_ws/install/obstacle_stop/lib/python3.10/site-packages/obstacle_stop/obstacle_stop_node.py", line 17
    main()ro
          ^^
SyntaxError: invalid syntax

